// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot if on the close position page 1`] = `
<Fragment>
  <WithStyles(Connect(withHandlers(Connect(Connect(branch(FirestoreConnect(Connect(withHandlers(ClosePosition))))))))) />
  <div
    className="bottomMock"
  />
  <WithStyles(ForwardRef(BottomNavigation))
    className="bottomNavigation"
    onChange={[Function]}
    showLabels={true}
    value="CLOSE_POSITION"
  >
    <WithStyles(ForwardRef(BottomNavigationAction))
      icon={<Memo />}
      label="Open"
      value="CREATE_POSITION"
    />
    <WithStyles(ForwardRef(BottomNavigationAction))
      icon={<Memo />}
      label="Portfolio"
      value="HOME"
    />
    <WithStyles(ForwardRef(BottomNavigationAction))
      icon={<Memo />}
      label="Profile"
      value="PROFILE"
    />
  </WithStyles(ForwardRef(BottomNavigation))>
</Fragment>
`;

exports[`matches snapshot if on the create position page 1`] = `
<Fragment>
  <WithStyles(Connect(withHandlers(withHandlers(CreatePosition)))) />
  <div
    className="bottomMock"
  />
  <WithStyles(ForwardRef(BottomNavigation))
    className="bottomNavigation"
    onChange={[Function]}
    showLabels={true}
    value="CREATE_POSITION"
  >
    <WithStyles(ForwardRef(BottomNavigationAction))
      icon={<Memo />}
      label="Open"
      value="CREATE_POSITION"
    />
    <WithStyles(ForwardRef(BottomNavigationAction))
      icon={<Memo />}
      label="Portfolio"
      value="HOME"
    />
    <WithStyles(ForwardRef(BottomNavigationAction))
      icon={<Memo />}
      label="Profile"
      value="PROFILE"
    />
  </WithStyles(ForwardRef(BottomNavigation))>
</Fragment>
`;

exports[`matches snapshot if on the home page 1`] = `
<Fragment>
  <WithStyles(Connect(withHandlers(Connect(branch(FirestoreConnect(Connect(Connect(Home)))))))) />
  <div
    className="bottomMock"
  />
  <WithStyles(ForwardRef(BottomNavigation))
    className="bottomNavigation"
    onChange={[Function]}
    showLabels={true}
    value="HOME"
  >
    <WithStyles(ForwardRef(BottomNavigationAction))
      icon={<Memo />}
      label="Open"
      value="CREATE_POSITION"
    />
    <WithStyles(ForwardRef(BottomNavigationAction))
      icon={<Memo />}
      label="Portfolio"
      value="HOME"
    />
    <WithStyles(ForwardRef(BottomNavigationAction))
      icon={<Memo />}
      label="Profile"
      value="PROFILE"
    />
  </WithStyles(ForwardRef(BottomNavigation))>
</Fragment>
`;

exports[`matches snapshot if on the position page 1`] = `
<Fragment>
  <WithStyles(Connect(withHandlers(Connect(Connect(branch(FirestoreConnect(Connect(Connect(withHandlers(Connect(withStateHandlers(withHandlers(withProps(Connect(lifecycle(mapProps(mapProps(Position)))))))))))))))))) />
  <div
    className="bottomMock"
  />
  <WithStyles(ForwardRef(BottomNavigation))
    className="bottomNavigation"
    onChange={[Function]}
    showLabels={true}
    value="POSITION"
  >
    <WithStyles(ForwardRef(BottomNavigationAction))
      icon={<Memo />}
      label="Open"
      value="CREATE_POSITION"
    />
    <WithStyles(ForwardRef(BottomNavigationAction))
      icon={<Memo />}
      label="Portfolio"
      value="HOME"
    />
    <WithStyles(ForwardRef(BottomNavigationAction))
      icon={<Memo />}
      label="Profile"
      value="PROFILE"
    />
  </WithStyles(ForwardRef(BottomNavigation))>
</Fragment>
`;

exports[`matches snapshot if on the profile page 1`] = `
<Fragment>
  <WithStyles(Connect(Profile)) />
  <div
    className="bottomMock"
  />
  <WithStyles(ForwardRef(BottomNavigation))
    className="bottomNavigation"
    onChange={[Function]}
    showLabels={true}
    value="PROFILE"
  >
    <WithStyles(ForwardRef(BottomNavigationAction))
      icon={<Memo />}
      label="Open"
      value="CREATE_POSITION"
    />
    <WithStyles(ForwardRef(BottomNavigationAction))
      icon={<Memo />}
      label="Portfolio"
      value="HOME"
    />
    <WithStyles(ForwardRef(BottomNavigationAction))
      icon={<Memo />}
      label="Profile"
      value="PROFILE"
    />
  </WithStyles(ForwardRef(BottomNavigation))>
</Fragment>
`;
